[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] } #async await capabilities
reqwest = { version = "0.11", features = ["json"] } #client side http request
serde = {version = "1.0.14", features = ["derive"]} #json


