[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4" #server-side web 
tokio = { version = "1", features = ["full"] } #async await capabilities
perlin2d = "0.2.6" #perlin noise
chrono = "0.4" #getting utc time
